Fix alignment of icon and content

--- a/src/client/styles/components/Notification.scss
+++ b/src/client/styles/components/Notification.scss
@@ -1,8 +1,8 @@
-
-.research-alert {border-radius: 4px;
+.research-alert {
+  border-radius: 4px;
   background-color: #e6ecf0;
   color: var(--ui-black);
-  display: block;
+  display: flex;
   font-size: var(--font-size--1);
   margin: var(--space-m) 0;
   padding: var(--space-m) var(--space-xl);
@@ -20,5 +20,11 @@
     color: var(--section-research-primary);
     font-size: var(--font-size-0);
     font-weight: 600;
+    line-height: 1;
+    padding-bottom: var(--space-xxs);
+  }
+
+  &__icon {
+    padding-right: var(--space-xs);
   }
 }
